src/test/ui/span/issue-37767.stderr
error[E0034]: multiple applicable items in scope
  --> $DIR/issue-37767.rs:10:7
   |
LL |     a.foo()
   |       ^^^ multiple `foo` found
   |
note: candidates defined here:
  --> $DIR/issue-37767.rs:2:5
   |
LL |     fn foo(&mut self) {}
   |     ^^^^^^^^^^^^^^^^^ candidate #1 is defined in the trait `A`
...
LL |     fn foo(&mut self) {}
   |     ^^^^^^^^^^^^^^^^^ candidate #2 is defined in the trait `B`
help: disambiguate the method call for candidate #1
   |
LL |     A::foo(&a)
   |     ^^^^^^^^^^
help: disambiguate the method call for candidate #2
   |
LL |     B::foo(&a)
   |     ^^^^^^^^^^

error[E0034]: multiple applicable items in scope
  --> $DIR/issue-37767.rs:22:7
   |
LL |     a.foo()
   |       ^^^ multiple `foo` found
   |
note: candidates defined here:
  --> $DIR/issue-37767.rs:14:5
   |
LL |     fn foo(&self) {}
   |     ^^^^^^^^^^^^^ candidate #1 is defined in the trait `C`
...
LL |     fn foo(&self) {}
   |     ^^^^^^^^^^^^^ candidate #2 is defined in the trait `D`
help: disambiguate the method call for candidate #1
   |
LL |     C::foo(&a)
   |     ^^^^^^^^^^
help: disambiguate the method call for candidate #2
   |
LL |     D::foo(&a)
   |     ^^^^^^^^^^

error[E0034]: multiple applicable items in scope
  --> $DIR/issue-37767.rs:34:7
   |
LL |     a.foo()
   |       ^^^ multiple `foo` found
   |
note: candidates defined here:
  --> $DIR/issue-37767.rs:26:5
   |
LL |     fn foo(self) {}
   |     ^^^^^^^^^^^^ candidate #1 is defined in the trait `E`
...
LL |     fn foo(self) {}
   |     ^^^^^^^^^^^^ candidate #2 is defined in the trait `F`
help: disambiguate the method call for candidate #1
   |
LL |     E::foo(a)
   |     ^^^^^^^^^
help: disambiguate the method call for candidate #2
   |
LL |     F::foo(a)
   |     ^^^^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0034`.
